[package]
name = "snm-brightdata-client"
version = "0.2.5"
edition = "2021"
description = "Bright Data Wrapper Client Highly compacted Data implemented in Rust with Actix Web"
authors = ["Inx Maurya <you@example.com>"]
license = "MIT"
repository = "https://github.com/snmmaurya/snm-brightdata-client"
readme = "README.md"
keywords = ["mcp", "brightdata", "proxy", "client", "actix"]
categories = ["web-programming", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"
dotenv = "0.15"
scraper = "0.17"
urlencoding = "2.1"
async-trait = "0.1.88"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
actix-web-lab = "0.24.2"
tokio-stream = "0.1.17"
bytes = "1.0" 
regex = "1.0"
lazy_static = "1.4"  # Add this line
once_cell = "1.21.3"

[lib]
name = "snm_brightdata_client"
path = "src/lib.rs"

[[bin]]
name = "snm_server"
path = "src/bin/snm_server.rs"

[[bin]]
name = "snm_cli"
path = "src/bin/snm_cli.rs"
